--- a/bakery_cakes.html
+++ b/bakery_cakes.html
@@ -19,6 +19,7 @@ if (!isset($_SESSION['username'])) {
 <!-- <script src="static/js/fonts.js" ></script> -->
 <!-- <link rel="stylesheet" href="static/css/bootstrap.min.css" > -->
 <link rel="stylesheet" href="static/css/main.css"/> 
+<link rel="stylesheet" href="static/css/mediarules.css"/> 
 <link rel="stylesheet" href="static/css/w3.css"/> 
 </head>
 <body class="main-body">
