--- a/staff_bakery_delivery.html
+++ b/staff_bakery_delivery.html
@@ -9,6 +9,7 @@
 <script src="static/js/staff.js"></script>
 <!-- <link rel="stylesheet" href="static/css/bootstrap.min.css" > -->
 <link rel="stylesheet" href="static/css/main.css"/> 
+<link rel="stylesheet" href="static/css/mediarules.css"/> 
 <link rel="stylesheet" href="static/css/w3.css"/> 
 </head>
 <body class="main-body">
