New Bake4me client Staff Admin Uploads

--- a/school_notice_board.html
+++ b/school_notice_board.html
@@ -18,7 +18,7 @@ if (!isset($_SESSION['username'])) {
 <script src="static/js/jquery.min.js" ></script>
 <script src="static/js/main.js" ></script>
 <link rel="stylesheet" href="static/css/main.css"/> 
-<link rel="stylesheet" href="static/ss/display.css"/>
+<link rel="stylesheet" href="static/css/mediarules.css"/> 
 <link rel="stylesheet" href="static/css/w3.css"/> 
 </head>
 <body class="main-body">
