--- a/staff_bakery_estiment.html
+++ b/staff_bakery_estiment.html
@@ -7,8 +7,8 @@
 <script src="static/js/jquery.min.js"></script>
 <script src="static/js/main.js"></script>
 <script src="static/js/staff.js"></script>
-<!-- <link rel="stylesheet" href="static/css/bootstrap.min.css" > -->
 <link rel="stylesheet" href="static/css/main.css"/> 
+<link rel="stylesheet" href="static/css/mediarules.css"/> 
 <link rel="stylesheet" href="static/css/w3.css"/> 
 </head>
 <body class="main-body">
@@ -51,7 +51,7 @@
                 <label onclick="Load_Customer_Estiments_Page ()" class="main-sub-navigation-links-labels"> 
                     <!-- pay -->
                     <img src="static/imgs/bakery/estiment.webp" class="pay-webp-img" >
-                    <span class="w3-badge w3-blue">0</span>
+                    <span class="w3-badge w3-small w3-blue">0</span>
                 </label>
             
 
@@ -123,11 +123,7 @@
     </script>
 
     <!-- Main Content Body  Begin-->
-    <!-- <div class="admin-navigation-sublinks">
-        <label>Estimates</label>
-        <label>Orders</label>
-        <label>History</label>
-    </div><br> -->
+
     <br>
     <center>
         <table class=" status-table">
