--- a/bakery_register.html
+++ b/bakery_register.html
@@ -6,6 +6,7 @@
 <script src="static/js/main.js" ></script>
 <!-- <script src="static/js/fonts.js" ></script> -->
 <link rel="stylesheet" href="static/css/main.css"/> 
+<link rel="stylesheet" href="static/css/mediarules.css"/> 
 <link rel="stylesheet" href="static/css/w3.css"/> 
 </head>
 <body class="main-body">
