--- a/school_index.html
+++ b/school_index.html
@@ -16,8 +16,8 @@ if (!isset($_SESSION['username'])) {
 <title>School Index</title>
 <script src="static/js/jquery.min.js" ></script>
 <script src="static/js/main.js" ></script>
-
 <link rel="stylesheet" href="static/css/main.css"/> 
+<link rel="stylesheet" href="static/css/mediarules.css"/> 
 <link rel="stylesheet" href="static/css/w3.css"/> 
 </head>
 <body class="main-body">
