New Bake4me client Staff Admin Uploads

--- a/staff_bakery_orders.html
+++ b/staff_bakery_orders.html
@@ -58,7 +58,7 @@
                 <label onclick="Load_Customer_Orders_Page ()" class="main-sub-navigation-links-labels">  
                     <!-- Feedback  -->
                     <img src="static/imgs/bakery/orders.webp" class="feedback-webp-img" >
-                    <span class="w3-badge w3-blue">0</span>
+                    <span class="icone-count-spans w3-badge w3-blue">0</span>
                 </label>
 
                 <label onclick="Load_Customer_Feedbacks_Page ()" class="main-sub-navigation-links-labels">  
