--- a/school_index.html
+++ b/school_index.html
@@ -132,7 +132,7 @@ if (!isset($_SESSION['username'])) {
     </p>
 
     <center>
-        <button onclick="Load_School_Login_Page ()" class="main-navigation-btns main-navigation-btns-fontstyle" >Enroll </button>
+        <button onclick="Load_School_Login_Register_Page ()" class="main-navigation-btns main-navigation-btns-fontstyle" >Enroll </button>
     </center>
 
 </body>
