--- a/staff_bakery_feedbacks.html
+++ b/staff_bakery_feedbacks.html
@@ -138,17 +138,26 @@
             <!-- shoulb be dynamically created... -->
         </table>
     </center><br>
-    <center> <button class="admin-btn fontstyles">Work on Query</button></center><br>
     <div><!-- Begin New Estiments div -->
         <center>
-            <!-- <form class="orders_from_to_form" id="price-edit-form">
-                <label>Customer</label><br>
-                <select id="types_options" name="itemtype" class="form_input_select" onchange="FetchPricesFromServer ()" >
-                    <option>Your Name</option>
-                    <option value="Birth Day" >John</option>
-                    <option value="Wedding" >Peter</option>
-                </select><br>
-            </form> -->
+             <div class="staff-work-on-div" ><!-- Begin New Estiments div -->
+	<button class="admin-btn fontstyles"> Query Details</button>
+        <center>
+            <form class="orders_from_to_form" id="price-edit-form">
+               <div class="autocomplete">
+						<label><b>Name</label><br>
+						<input id="name-input-id" type="text" name="paint_name" placeholder="Type first letter" class="paint-name order-inputs">
+				</div><br>
+            </form>
+			
+	</div><!-- End New Estiments div -->
+	</center><br>
+			<center>
+			<div>
+		<p>results</p>
+		</div>
+		<button class="assign-btn fontstyles" onclick="document.getElementById('id01').style.display='block'"> Feedback  </button><br><br>
+            
             <!-- 
                 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
                 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@ -156,7 +165,7 @@
                 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
                 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
             -->
-            <button class="assign-btn fontstyles" onclick="document.getElementById('id01').style.display='block'"> Feedback </button>
+       
         </center> <br>
             <div id="id01" class="w3-modal">
                 <div class="w3-modal-content w3-animate-top w3-card-4">
@@ -225,8 +234,6 @@
                     </div>
                 </div>
             </div>
-
-        </div><!-- End New Estiments div -->
 <script>
 autocomplete(document.getElementById("name-input-id"), customer_names)
 </script>
