--- a/school_payment.html
+++ b/school_payment.html
@@ -52,51 +52,67 @@ if (!isset($_SESSION['username'])) {
     <div id="NaviDivHeader">
             <label class="open-navigation-label" onclick="OpenMainNavigetion()">&#9776;</label>
             <!-- Display client account benifits -->
-            <?php 
+            <!-- <?php 
                 if (isset($_SESSION['username'])):
-            echo'
-                <label onclick="Load_School_SubLink_Payment ()" class="main-sub-navigation-links-labels"> 
-                    <!-- pay -->
-                    <img src="static/imgs/school/pay.webp" class="pay-webp-img" >
-                </label>
+            echo' -->
 
-                <label onclick="Load_School_SubLink_Calender ()" class="main-sub-navigation-links-labels">  
-                    <!-- Feedback  -->
-                    <img src="static/imgs/school/calender.webp" class="feedback-webp-img" >
-                </label>
-            ';
+            <label onclick="Load_School_Payment ()" class="main-sub-navigation-links-labels"> 
+                <!-- pay -->
+                <img src="static/imgs/school/payment.webp" class="pay-webp-img" >
+            </label>
+            <label onclick="Load_School_Materials ()" class="main-sub-navigation-links-labels">  
+                <!-- Contents   -->
+                <img src="static/imgs/school/material.webp" class="feedback-webp-img" >
+            </label>
+            <label onclick="Load_School_Notice_Board ()" class="main-sub-navigation-links-labels">  
+                <!-- Notice Board   -->
+                <img src="static/imgs/school/noticeboard.webp" class="feedback-webp-img" >
+            </label>
+            <label onclick="Load_School_Calender ()" class="main-sub-navigation-links-labels">  
+                <!-- Calender   -->
+                <img src="static/imgs/school/calender.webp" class="feedback-webp-img" >
+            </label>
+            
+            <!-- ';
             else:
                 echo "Thank You Our Vistor";
             endif;
-            ?>
+            ?> -->
     </div> <!--  End <<<< NaviDivHeader >>>>  -->
 
         <div id="open-navigation-label-profile-div">
-        <label class="open-navigation-profile-label" onclick="OpenProfileNavigetion()"> 
-            <!-- &#9881; -->
-            <!-- <img src="static/imgs/profile.webp" class="profile-svg-img" > -->
+        <label class="open-navigation-profile-label" onclick="OpenProfileNavigetion()">
             <img src="static/imgs/school/profile.svg" class="profile-svg-img" >
         </label>
             <div id= "profile-side-bar" class="profile-side-bar">
                 <span href="javascript:void(0)" class="closebtn" onclick="CloseProfileNavigetion()"><label class="close-navi-span"> &times;</label></span><!-- closs the navi -->
                 <div id="navigetion-links-div">
                     <br><br>
-                    <?php 
-                        if (isset($_SESSION['username'])): 
-                            echo '<br><label class="profile-html-labels profile-php-profile-html-fontstyle"> Name</label><br>';
-                            $name = sprintf('<br><label class="profile-php-labels profile-php-profile-html-fontstyle"> %s </label>',$_SESSION['username']);
-                            echo $name;
-                            echo '<br><label class="profile-html-labels profile-php-profile-html-fontstyle"> Contacts</label><br>';
-                            echo '<br><label class="profile-html-labels profile-php-profile-html-fontstyle">Location</label><br>';
-                            echo '<br><label class="profile-html-labels profile-php-profile-html-fontstyle"> Email</label><br>';
-                            echo '<br><br><label class="profile-html-labels profile-php-profile-html-fontstyle"> Receipts</label>';
-                            echo '<br><br><button type="button" onclick="School_Logout ()"  class="logout-btn logout-login-regester-btns-fontstyle">Logout</button>
-                        else:
-                            echo "Not Logged in";
-                            echo '<br><br><form action="http://localhost/bake4me-php/index.php" method="POST" ><button type="submit"  class="login-btn logout-login-regester-btns-fontstyle">Log in</button></form> <br>Or<br>';
-                            echo '<br><button onclick="Load_Client_Register_Page ()" class="register-btn logout-login-regester-btns-fontstyle">Register</button>';
-                        endif; 
-                    ?>
+                                        <!-- <?php 
+                        if (isset($_SESSION['username'])):  -->
+                            <!-- echo '<br><label class="profile-html-labels profile-php-profile-html-fontstyle"> Name</label><br>'; -->
+                            <br><label class="profile-html-labels profile-php-profile-html-fontstyle"> Name</label><br>
+                            <!-- $name = sprintf('<br><label class="profile-php-labels profile-php-profile-html-fontstyle"> %s </label>',$_SESSION['username']); -->
+                            <br><label class="profile-php-labels profile-php-profile-html-fontstyle"> </label>
+                            <!-- echo $name; -->
+                            <!-- echo '<br><label class="profile-html-labels profile-php-profile-html-fontstyle"> Contacts</label><br>'; -->
+                            <br><label class="profile-html-labels profile-php-profile-html-fontstyle"> Contacts</label><br>
+                            <!-- echo '<br><label class="profile-html-labels profile-php-profile-html-fontstyle">Location</label><br>'; -->
+                            <br><label class="profile-html-labels profile-php-profile-html-fontstyle">Location</label><br>
+                            <!-- echo '<br><label class="profile-html-labels profile-php-profile-html-fontstyle"> Email</label><br>'; -->
+                            <br><label class="profile-html-labels profile-php-profile-html-fontstyle"> Email</label><br>
+                            <!-- echo '<br><br><label class="profile-html-labels profile-php-profile-html-fontstyle"> Receipts</label>'; -->
+                            <br><br><label class="profile-html-labels profile-php-profile-html-fontstyle"> Receipts</label>
+                            <!-- echo '<br><br><form action="http://localhost/bake4me-php/logout.php" method="POST" ><button type="submit"  class="logout-btn logout-login-regester-btns-fontstyle">Logout</button> </form>'; -->
+                            <br><br><button onclick="School_LogOut ()" type="button"  class="logout-btn logout-login-regester-btns-fontstyle">Logout</button>
+                        <!-- else: -->
+                            <!-- echo "Not Logged in"; -->
+                            <!-- echo '<br><br><form action="http://localhost/bake4me-php/index.php" method="POST" ><button type="submit"  class="login-btn logout-login-regester-btns-fontstyle">Log in</button></form> <br>Or<br>'; -->
+                            <br><br><button onclick="School_LogIn ()" type="button"  class="login-btn logout-login-regester-btns-fontstyle">Log in</button> <br>
+                            <!-- echo '<br><button onclick="Load_Client_Register_Page ()" class="register-btn logout-login-regester-btns-fontstyle">Register</button>'; -->
+                            <br><button onclick="Load_School_Login_Register ()" class="register-btn logout-login-regester-btns-fontstyle">Register</button>
+                        <!-- endif;  
+                    ?>-->
                 </div>
             </div>
         </div>
