--- a/school_materials.html
+++ b/school_materials.html
@@ -125,13 +125,17 @@ if (!isset($_SESSION['username'])) {
     </script>
 
 
-    <center>
-        <br><br>
-        <p>
-            Theory on how to bake <br>
-        </p>
-        <!-- <button type="submit"  class="logout-btn logout-login-regester-btns-fontstyle">Process Payment</button> -->
-    </center>
+     <center><br><br>
+        <table class=" status-table">
+            <tr class="table-headings-tr"> <th>Material</th><th>Download </th><th>View </th </tr>
+            <tr class="orders-table-tr"><td class="orders-avenue-td"> Fees</td>
+			<td class="orders-avenue-td">
+			
+			<button class="down-load-btn"> Download</button>
+			</td></tr>
+			
+        </table>
+    </center><br>
 
 </body>
 </html>
