--- a/school_notice_board.html
+++ b/school_notice_board.html
@@ -125,13 +125,20 @@ if (!isset($_SESSION['username'])) {
     </script>
 
 
-    <center>
         <br><br>
-        <p>
-            School notice board
-            
-        </p>
-    </center>
+       <center>
 
+		<div class="calender-card">
+	  <div class="calender-container">
+	  <hr class="calender-card-hr">
+		Date :: 3/3/2021<br>
+		kkkkkkkkkkkkkkkkkkkkk<br><br>
+	  
+		
+		<hr class="calender-card-hr">
+	  </div>
+	  
+	</div>
+	</center>
 </body>
 </html>
