--- a/bakery_deliveries.html
+++ b/bakery_deliveries.html
@@ -154,7 +154,11 @@ if (!isset($_SESSION['username'])) {
 		 </div><br><br>
 			
 	</div><!-- End New Estiments div -->
-<center><button class="assign-btn fontstyles" onclick="document.getElementById('id01').style.display='block'"> Approve  </button></center><br><br>
+<center>
+<div id="bottom-btn-div-id">
+	<button class="assign-btn fontstyles" onclick="document.getElementById('id01').style.display='block'"> Approve  </button>
+	</div>
+	</center><br><br>
             
             <!-- 
                 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
