--- a/bakery_payment.html
+++ b/bakery_payment.html
@@ -151,7 +151,9 @@ if (!isset($_SESSION['username'])) {
         </table>
     <br>
     <center>
-        <button class="assign-btn fontstyles" onclick="document.getElementById('id01').style.display='block'"> Make Payment </button><br><br>
+	<div id="bottom-btn-div-id">
+        <button  class="assign-btn fontstyles" onclick="document.getElementById('id01').style.display='block'"> Make Payment </button><br><br>
+		</div>
 	</center>
 			<!-- 
                 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
