--- a/school_payment.html
+++ b/school_payment.html
@@ -138,10 +138,9 @@ if (!isset($_SESSION['username'])) {
         </table>
     </center><br>
     <center>
-		
-	
-	
+		<div id="bottom-btn-div-id">
 	<button class="assign-btn fontstyles" onclick="document.getElementById('id01').style.display='block'"> Make Payment </button><br><br>
+			</div>
 			</center>
 			<!-- 
                 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
