--- a/staff_bakery_delivery.html
+++ b/staff_bakery_delivery.html
@@ -160,8 +160,11 @@
 			<div>
 		<p>results</p>
 		</div>
+		</center>
+		<center>
+		<div id="bottom-btn-div-id">
 		<button class="assign-btn fontstyles" onclick="document.getElementById('id01').style.display='block'"> Price </button><br><br>
-            
+            </div>
 			</center>
 			<!-- 
                 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
