--- a/staff_bakery_feedbacks.html
+++ b/staff_bakery_feedbacks.html
@@ -158,8 +158,12 @@
 			<div>
 		<p>results</p>
 		</div>
+		</center>
+		<center>
+		<div id="bottom-btn-div-id">
 		<button class="assign-btn fontstyles" onclick="document.getElementById('id01').style.display='block'"> Feedback  </button><br><br>
-            
+            </div>
+			</center>
             <!-- 
                 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
                 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
@@ -168,7 +172,7 @@
                 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
             -->
        
-        </center> <br>
+         <br>
             <div id="id01" class="w3-modal">
                 <div class="w3-modal-content w3-animate-top w3-card-4">
                     <header class="w3-container w3-teal">
