--- a/staff_school_new.html
+++ b/staff_school_new.html
@@ -147,8 +147,14 @@
             
         </label>
 
-        <br><button onclick="Load_Students_New_Approve_Page ()" type="button" class="submit-btn">Approve</button>
-    </center>
+        <br>
+		
+    </center><br>
+	<center>
+	<div id="bottom-btn-div-id">
+		<button class="assign-btn fontstyles"  onclick="Load_Students_New_Approve_Page ()" type="button" class="submit-btn">Approve</button>
+		</div>
+	</center>
 
 
 <script>
