--- a/staff_school_new_approve.html
+++ b/staff_school_new_approve.html
@@ -141,10 +141,14 @@
             Course Fees <br>
         </label>
         </form><br>
-        <br><button type="button" class="submit-btn">Done</button>
+        
     </center>
 
-
+		<center>
+			<div id="bottom-btn-div-id">
+				<button class="assign-btn fontstyles"  type="button" class="submit-btn">Done</button>
+				</div>
+			</center>
 <script>
 autocomplete(document.getElementById("name-input-id"), students_names)
 </script>
