--- a/staff_school_payments.html
+++ b/staff_school_payments.html
@@ -134,10 +134,14 @@
                 <input id="name-input-id" type="text" name="paint_name" placeholder="Type first letter" class="paint-name order-inputs">
             </div><br>
         </form><br>
-        <br><button type="button" class="submit-btn">Make Active</button>
+      
     </center>
 
-
+	<center>
+	<div id="bottom-btn-div-id">
+		<button class="assign-btn fontstyles"  type="button" class="submit-btn">Make Active</button>
+		</div>
+	</center>
 <script>
 autocomplete(document.getElementById("name-input-id"), students_names)
 </script>
