--- a/staff_school_registered.html
+++ b/staff_school_registered.html
@@ -153,8 +153,13 @@
             @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
         -->
         
-        <br><button type="button" class="submit-btn">Make Active</button>
+   
     </center>
+	<center>
+	<div id="bottom-btn-div-id">
+		<button class="assign-btn fontstyles"   type="button" class="submit-btn">Make Active</button>
+		</div>
+	</center><br>
 
 
 <script>
