--- a/staff_bakery_orders.html
+++ b/staff_bakery_orders.html
@@ -141,7 +141,7 @@
         </table>
     </center><br>
 	<center>
-			<div class="staff-work-on-div" ><!-- Begin New Estiments div -->
+			<div id="staff-work-on-div" ><!-- Begin New Estiments div -->
 	<button class="admin-btn fontstyles">Mark Finished</button>
         <center>
             <form class="orders_from_to_form" id="price-edit-form">
