--- a/staff_bakery_feedbacks.html
+++ b/staff_bakery_feedbacks.html
@@ -142,7 +142,7 @@
     </center><br>
     <div><!-- Begin New Estiments div -->
         <center>
-             <div class="staff-work-on-div" ><!-- Begin New Estiments div -->
+             <div id="staff-work-on-div" ><!-- Begin New Estiments div -->
 	<button class="admin-btn fontstyles"> Query Details</button>
         <center>
             <form class="orders_from_to_form" id="price-edit-form">
