--- a/staff_bakery_delivery.html
+++ b/staff_bakery_delivery.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="static/css/mediarules.css"/> 
 <link rel="stylesheet" href="static/css/w3.css"/> 
 </head>
-<body class="main-body">
+<body class="main-body" onload="IntializeSetUp ()">
     <div id="main-header">
         <div  id= "Navigetion" class="header">
                 <!-- ======= CLOSE ====== -->
@@ -132,15 +132,10 @@
     </script>
 
 
-    <br>
-    <center>
-        <table class=" status-table">
-            <tr class="table-headings-tr"> <th>Name</th><th>Deliveries </th> </tr>
-            <tr class="orders-table-tr"><td class="orders-avenue-td">John</td> <td class="orders-status-td"><span id="chips-status-id" class="w3-badge w3-blue w3-padding-small">5</span></td></tr>
-            <tr class="orders-table-tr"><td class="orders-avenue-td">Henry</td> <td class="orders-status-td"><span  id="piloa-status-id" class="w3-badge w3-blue w3-padding-small" >2</span></td></tr>
-            <!-- shoulb be dynamically created... -->
-        </table>
-    </center><br>
+	 <table class="status-table" id="status-able-data-id"   >
+        <tr class="table-headings-tr"> <th>Name</th><th>Deliveries </th> </tr>
+    </table><br>
+	
     <center> 
     <div id="staff-work-on-div" ><!-- Begin New Estiments div -->
 	<button class="admin-btn fontstyles">Assign for Delivery</button>
