--- a/staff_bakery_feedbacks.html
+++ b/staff_bakery_feedbacks.html
@@ -143,7 +143,7 @@
             <form class="orders_from_to_form" id="price-edit-form">
                <div class="autocomplete">
 						<label><b>Name</label><br>
-						<input id="name-input-id" type="text" name="paint_name" placeholder="Type first letter" class="paint-name order-inputs">
+						<input id="name-input-id" type="text" name="paint_name" placeholder="Type first letter" onchange="Fetch_Selected_Data ()" class="paint-name order-inputs">
 				</div><br>
             </form>
 			
