--- a/staff_bakery_estiment.html
+++ b/staff_bakery_estiment.html
@@ -98,7 +98,7 @@
                             <!-- echo '<br><label class="profile-html-labels profile-php-profile-html-fontstyle"> Name</label><br>'; -->
                             <br><label class="profile-html-labels profile-php-profile-html-fontstyle"> Name</label><br>
                             <!-- $name = sprintf('<br><label class="profile-php-labels profile-php-profile-html-fontstyle"> %s </label>',$_SESSION['username']); -->
-                            <br><label class="profile-php-labels profile-php-profile-html-fontstyle"> </label>
+                            <br><label id="active-link-page" class=" profile-php-labels profile-php-profile-html-fontstyle"> </label>
                             <!-- echo $name; -->
                             <!-- echo '<br><label class="profile-html-labels profile-php-profile-html-fontstyle"> Contacts</label><br>'; -->
                             <br><label class="profile-html-labels profile-php-profile-html-fontstyle"> Contacts</label><br>
