--- a/staff_bakery_feedbacks.html
+++ b/staff_bakery_feedbacks.html
@@ -131,7 +131,7 @@
     </script>
 
 
-     <table class="status-table" id="status-able-data-id"   >
+     <table class="status-table" id="status-able-data-id">
         <tr class="table-headings-tr"> <th>Customer</th><th>Queries </th> </tr>
     </table><br>
 	
@@ -149,11 +149,11 @@
 			
 	</div><!-- End New Estiments div -->
 	</center><br>
-			<center>
-			<div>
-		<p>results</p>
-		</div>
-		</center>
+		<div id="chips-view-new-oders-div">
+					<table  class="user-scrolling-table">
+                        <tbody id="results-table-tbody"></tbody>
+                    </table>
+		</div><br>
 		<center>
 		<div id="bottom-btn-div-id">
 		<button class="assign-btn fontstyles" onclick="document.getElementById('id01').style.display='block'"> Feedback  </button><br><br>
