--- a/staff_bakery_crud.html
+++ b/staff_bakery_crud.html
@@ -136,7 +136,7 @@
     <button class="accordion">Add Item</button>
     <div class="panel">
         <center><br>
-            <form class="order-form" method="POST" enctype="multipart/form-data" action="http://127.0.0.1:6060/createitems">
+            <form class="order-form" method="POST" enctype="multipart/form-data" action="http://127.0.0.1:6060/utilities_createitems">
                 <label>Menu Type</label><br>
                 <select id="add-itemtypes-options" name="itemtype" class="form_input_select">
                     <option>Select Type</option>
@@ -155,7 +155,7 @@
                     <p><img id="back-side-display-pra-id" class="img-to-be-displayed" /></p>
                 </div><br>
                 <label>Password</label>
-                <input required class="form_input" placeholder="Password" name="pwd" autocomplete="off" type="password"><br>
+                <input required class="form_input" placeholder="Password=2021" name="pwd" autocomplete="off" type="password"><br>
                 <button id="upload" class="submit-btn">Submit</button><br>
                 <!-- <button id="but_upload" class="submit-btn">Submit</button> -->
             </form>
