--- a/staff_bakery_delivery.html
+++ b/staff_bakery_delivery.html
@@ -132,7 +132,7 @@
     </script>
 
 
-	 <table class="status-table" id="status-able-data-id"   >
+	 <table class="status-table" id="status-table-data-id"   >
         <tr class="table-headings-tr"> <th>Name</th><th>Deliveries </th> </tr>
     </table><br>
 	
