--- a/staff_bakery_feedbacks.html
+++ b/staff_bakery_feedbacks.html
@@ -131,7 +131,7 @@
     </script>
 
 
-     <table class="status-table" id="status-able-data-id">
+     <table class="status-table" id="status-table-data-id">
         <tr class="table-headings-tr"> <th>Customer</th><th>Queries </th> </tr>
     </table><br>
 	
