--- a/staff_bakery_estiment.html
+++ b/staff_bakery_estiment.html
@@ -10,6 +10,20 @@
 <link rel="stylesheet" href="static/css/main.css"/> 
 <link rel="stylesheet" href="static/css/mediarules.css"/> 
 <link rel="stylesheet" href="static/css/w3.css"/> 
+<script>
+
+// function SetUpColourNames () {ShowPaintColoursOptions("colour-input-id")	}
+function SetupAutocompleteNames () {autocomplete(document.getElementById("name-input-id"), items_names);}
+
+
+function IntializeSetUp ()
+{
+    LoadNamesFromServer ("utilities_cakes_names");
+    CreateDynamicStatusTable2 ()
+	setTimeout(SetupAutocompleteNames,1000)
+}
+
+</script>
 </head>
 <body class="main-body" onload="IntializeSetUp ()">
     <div id="main-header">
@@ -130,20 +144,13 @@
 
     <!-- Main Content Body  Begin-->
 
-    <br>
-    <!-- <center>
-        <table class=" status-table">
+    <div id="status-table-div-request-id">
+        <table class="status-table" id="status-table-data-id"   >
             <tr class="table-headings-tr"> <th>Cake Type</th><th>Estiments </th> </tr>
-            <tr class="orders-table-tr"><td class="orders-avenue-td">Birth Day</td> <td class="orders-status-td"><span id="chips-status-id" class="w3-badge w3-blue w3-padding-small">0</span></td></tr>
-            <tr class="orders-table-tr"><td class="orders-avenue-td">Wedding </td> <td class="orders-status-td"><span  id="piloa-status-id" class="w3-badge w3-blue w3-padding-small" >0</span></td></tr>
         </table>
-		-->
-    </center><br>
-    <table class="status-table" id="status-able-data-id"   >
-        <tr class="table-headings-tr"> <th>Cake Type</th><th>Estiments </th> </tr>
-    </table><br>
-	 
-	 <!--
+    </div><br>
+	
+	<!--
 		<div id="chips-view-new-oders-div">
 					<table  class="user-scrolling-table">
                         <tbody id="status-table-tbody"></tbody>
@@ -151,7 +158,7 @@
 				</div>-->
 
 
-			 <div id="staff-work-on-div" ><!-- Begin New Estiments div -->
+			<div id="staff-work-on-div" ><!-- Begin New Estiments div -->
 			<button class="admin-btn fontstyles"> Details</button>
 				
 					<form class="orders_from_to_form" id="price-edit-form">
@@ -246,7 +253,8 @@
                 </div>
             </div>
 <script>
-autocomplete(document.getElementById("name-input-id"), customer_names)
+// console.log("names==="+items_names_array)
+// autocomplete(document.getElementById("name-input-id"), items_names_array);
 </script>
 </body>
 </html>
