--- a/staff_bakery_orders.html
+++ b/staff_bakery_orders.html
@@ -131,7 +131,7 @@
     </script>
 
     <!-- Main Content Body  Begin-->
-    <table class="status-table" id="status-able-data-id"   >
+    <table class="status-table" id="status-table-data-id"   >
         <tr class="table-headings-tr"> <th>Cake Type</th><th>Orders </th> </tr>
     </table><br>
 	<center>
