New Bake4me client Staff Admin Server Uploads

--- a/staff_bakery_crud.html
+++ b/staff_bakery_crud.html
@@ -132,7 +132,6 @@
     </script>
 
     <br>
-
     <button class="accordion">Add Item</button>
     <div class="panel">
         <center><br>
@@ -147,7 +146,7 @@
                 <label>Name</label>
                 <input required class="form_input" name="name" autocomplete="off" type="text"><br>
                 <label>Price</label>
-                <input required class="form_input" name="price" autocomplete="off" type="text"><br>
+                <input required class="form_input" name="price" placeholder="price / discription" autocomplete="off" type="text"><br>
                 <div>
                     <label class="regester-form-labels">Picture</label>
                     <p><input type="file"  accept="image/*" name="file" id="back-side-file"  onchange="DisplayUploadedImage(event,'back-side-display-pra-id')" style="display: none;"></p>
